feat: MBTI in assessment, PDF report, and admin management
- Add USER/ADMIN roles; derive authorities from DB role in JWT filter; secure /api/admin/**
- Seed initial admin account (env-overridable) + persist 20 MBTI questions & 16 type profiles
- Persist MBTI results per user/session; include MBTI in assessment result DTO & PDF report
- Enforce session ownership on results/status/PDF (admins bypass via /api/admin)
- Admin API: list/delete users, list sessions, view results, download any user's PDF, MBTI question CRUD, MBTI content editing
- Frontend: role-aware auth + admin guard, admin dashboard (users, reports/PDF, MBTI questions, content), MBTI as final authenticated assessment step, MBTI section on results page

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>